Fix input fields jumping 1px vertically when focus on chrome
Turns out setting it from 20px -> 19px did the trick, tested on FF & Safari

--- a/webapp/app-styles/form.less
+++ b/webapp/app-styles/form.less
@@ -40,6 +40,7 @@ input, select, textarea {
   cursor: pointer;
   color: @text-body;
   display: inline-block;
+  line-height: inherit;
   padding: 0 (@padding * 2 + 4) 0 @padding;
   vertical-align: middle;
   -webkit-appearance: none;
