--- a/webapp/originalDataPoint/style.less
+++ b/webapp/originalDataPoint/style.less
@@ -74,7 +74,7 @@
 }
 
 .odp__sub-table {
-  line-height: 16px;
+  line-height: 15px;
   margin-top: 24px;
 
   .fra-review__issue-status {
@@ -114,7 +114,7 @@
 .odp-list__list-table {
   border-collapse: collapse;
   color: @text-body;
-  line-height: 20px;
+  line-height: 19px;
   width: 100%;
 }
 
